# Multi-Agent-Researcher

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: config.py  db.py  main.py  models.py  orchestrator.py  policies.py  schemas.py  scoring.py  utils.py
docs/: todo.md
migrations/: env.py
scripts/: dev_migrate.py
tests/: conftest.py  test_api_integration.py  test_pipeline_integration.py  test_policies.py  test_schemas.py  test_scoring.py  test_worker_tasks.py
worker/: agents.py  celery_app.py  tasks.py  tools.py
