[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-researcher"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "trafilatura>=1.8.0",
  "celery>=5.4",
  "redis>=5.0",
  "python-dotenv>=1.0",
  "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["app*", "worker*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
markers = [
  "integration: exercises the real app stack with Postgres/Redis",
]
